src/examples/errors/division_by_zero.veri
// Should fail: division by zero
fn main() -> int {
    let x: int = 10 / 0;
    x
}
